--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Seating Chart</title>
   </head>
   <body>
-    <main class="flex min-h-screen flex-col items-center" id="root"></main>
+    <main class="flex h-screen min-h-screen w-screen flex-col items-center overflow-hidden" id="root"></main>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
